DEEP-355: Creative feedback. Fix Welsh letter title content vertical alignment/top padding.

--- a/src/main/resources/assets/templates/letters/chips/new_psc_direction_letter_v1.css
+++ b/src/main/resources/assets/templates/letters/chips/new_psc_direction_letter_v1.css
@@ -26,7 +26,7 @@
     padding-left: 4mm;
     padding-right: 3mm;
     padding-bottom: 2mm;
-    padding-top: 2mm;
+    padding-top: 3mm;
     background-color: black;
     border-radius: 1.2mm;
 }
